Log in/out with ApplicationController

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,44 @@
  *= require_tree .
  *= require_self
  */
+.container {
+  width: 900px;
+  margin: auto;
+}
+nav {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  background-color: lightgrey;
+  padding: 10px;
+  font-size: 24px;
+  display: flex;
+  flex-direction: row-reverse;
+}
+.log-out-button {
+  background-color: grey;
+  text-decoration: none;
+  color: white;
+  text-align: right;
+  margin-right: 10px;
+  margin-left: 10px;
+  border-radius: 5px;
+  padding: 5px;
+}
+.log-in-link {
+  background-color: grey;
+  text-decoration: none;
+  color: white;
+  text-align: right;
+  margin-right: 10px;
+  margin-left: 10px;
+  border-radius: 5px;
+  padding: 5px;
+}
+.sign-up-link {
+  background-color: lightgreen;
+  text-decoration: none;
+  color: white;
+  margin-right: 10px;
+  border-radius: 5px;
+  padding: 5px;
+}
