--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,23 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
+
   </head>
 
   <body>
-    <%= yield %>
+    <nav>
+      <% if logged_in? %>
+        <form action="<%= session_url %>" method="post">
+          <input type="hidden" name="_method" value="delete" />
+          <input type="submit" value="Log Out!" class="log-out-button">
+        </form>
+      <% else %>
+        <a href="<%= new_session_url %>" class="log-in-link">Log in</a>
+        <a href="<%= new_user_url %>" class="sign-up-link">Sign up</a>
+      <% end %>
+    </nav>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
